<?xml version="1.0"?>
<package format="2">
  <name>object_detector</name>
  <version>0.0.1</version>
  <description>
    object_detector package.
  </description>

  <maintainer email="qwillis1@outlook.com">Tyler Willis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>